NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Core_Return_Location__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location__c</fullName>
    <inlineHelpText>Location when returned through the Core Returns program</inlineHelpText>
    <label>Core Return Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Core_Return_Location</valueSetName>
    </valueSet>
</CustomField>