NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_CoreCharge__c.field-meta.xml
<CustomField>
    <fullName>NATT_CoreCharge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this product items has a core charge. Checked if item has a core charge.</description>
    <label>Core Charge</label>
    <type>Checkbox</type>
</CustomField>