NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_CoreItem_P_N__c.field-meta.xml
<CustomField>
    <fullName>NATT_CoreItem_P_N__c</fullName>
    <description>Text field containing the part number of the core item. Core items are not stored in the product catalog.</description>
    <label>Core Item P/N</label>
    <length>32</length>
    <type>Text</type>
</CustomField>