NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_CorePrice__c.field-meta.xml
<CustomField>
    <fullName>NATT_CorePrice__c</fullName>
    <description>Price (credit) value of the core item</description>
    <label>Core Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>