NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Cost_Rule__c.field-meta.xml
<CustomField>
    <fullName>NATT_Cost_Rule__c</fullName>
    <description>NATT Use</description>
    <label>Cost Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MTO</fullName>
            </value>
            <value>
                <fullName>MTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>