NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_CPQ_Product__c.field-meta.xml
<CustomField>
    <fullName>NATT_CPQ_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates this is a cpq related product for NATT</description>
    <label>NATT CPQ Product</label>
    <type>Checkbox</type>
</CustomField>