NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Description_Line_2__c.field-meta.xml
<CustomField>
    <fullName>NATT_Description_Line_2__c</fullName>
    <description>NATT - Maps with same field name in JDE</description>
    <label>Description Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>