NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_DirectDelivery__c.field-meta.xml
<CustomField>
    <fullName>NATT_DirectDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this product item is available for direct delivery. JDE passed a 1.00 if direct delivered [checked] and &apos;0&apos; if the part is not a direct delivered item [unchecked].</description>
    <label>Direct Delivery</label>
    <type>Checkbox</type>
</CustomField>