NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Electric_Trailer__c.field-meta.xml
<CustomField>
    <fullName>NATT_Electric_Trailer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electric Trailer</label>
    <type>Checkbox</type>
</CustomField>