NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_EMCC__c.field-meta.xml
<CustomField>
    <fullName>NATT_EMCC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT if the product is a NATT Item</description>
    <label>EMCC</label>
    <type>Checkbox</type>
</CustomField>