NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_eSolutions_Plan__c.field-meta.xml
<CustomField>
    <fullName>NATT_eSolutions_Plan__c</fullName>
    <description>the esolutions plan number. used in email template and rollup fields</description>
    <label>Lynx Fleet Plan #</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>