NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Exclude_From_Discount_Calculations__c.field-meta.xml
<CustomField>
    <fullName>NATT_Exclude_From_Discount_Calculations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>defines if this product should be included in discount percentage calculations</description>
    <label>Exclude From Discount Calculations</label>
    <type>Checkbox</type>
</CustomField>