NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>NATT_ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>