NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_GL_Cat__c.field-meta.xml
<CustomField>
    <fullName>NATT_GL_Cat__c</fullName>
    <description>For NATT Use</description>
    <label>G/L Cat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FA03</fullName>
            </value>
            <value>
                <fullName>FA04</fullName>
            </value>
            <value>
                <fullName>FA05</fullName>
            </value>
            <value>
                <fullName>FA06</fullName>
            </value>
            <value>
                <fullName>FA07</fullName>
            </value>
            <value>
                <fullName>FA08</fullName>
            </value>
            <value>
                <fullName>FG01</fullName>
            </value>
            <value>
                <fullName>RA00</fullName>
            </value>
            <value>
                <fullName>RA06</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>