NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Height__c.field-meta.xml
<CustomField>
    <fullName>NATT_Height__c</fullName>
    <description>Height of the item in Inches</description>
    <label>Height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>