NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Include_in_Interim__c.field-meta.xml
<CustomField>
    <fullName>NATT_Include_in_Interim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Interim</label>
    <type>Checkbox</type>
</CustomField>