NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Is_Base_Unit__c.field-meta.xml
<CustomField>
    <fullName>NATT_Is_Base_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for base units only</description>
    <label>Is Base Unit</label>
    <type>Checkbox</type>
</CustomField>