NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_ItemPriceGroup__c.field-meta.xml
<CustomField>
    <fullName>NATT_ItemPriceGroup__c</fullName>
    <description>A number identifying the price group to which the item belongs</description>
    <label>Item Price Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>