NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Length__c.field-meta.xml
<CustomField>
    <fullName>NATT_Length__c</fullName>
    <description>Length of the item in Inches</description>
    <label>Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>