NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Ln_Ty__c.field-meta.xml
<CustomField>
    <fullName>NATT_Ln_Ty__c</fullName>
    <description>NATT. S = Stockable Item. N = Non-Stockable Item</description>
    <label>Ln Ty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>