NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Maintenance_Calc_Req__c.field-meta.xml
<CustomField>
    <fullName>NATT_Maintenance_Calc_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check this box if maintenance calculation is needed for this product if BluEdge</description>
    <label>Maintenance Calc Req</label>
    <type>Checkbox</type>
</CustomField>