NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_MetaDescription__c.field-meta.xml
<CustomField>
    <fullName>NATT_MetaDescription__c</fullName>
    <description>Meta Description for TES Products.</description>
    <label>Meta Description</label>
    <type>TextArea</type>
</CustomField>