NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_MetaKeyword__c.field-meta.xml
<CustomField>
    <fullName>NATT_MetaKeyword__c</fullName>
    <description>Meta Keyword for TES Products.</description>
    <label>Meta Keyword</label>
    <type>TextArea</type>
</CustomField>