NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_MetaTitle__c.field-meta.xml
<CustomField>
    <fullName>NATT_MetaTitle__c</fullName>
    <description>Meta Title for TES Products.</description>
    <label>Meta Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>