NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Model__c.field-meta.xml
<CustomField>
    <fullName>NATT_Model__c</fullName>
    <description>Model for TES Products.</description>
    <label>Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>