NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Model_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Model_Type__c</fullName>
    <description>NATT</description>
    <label>Model Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>