NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Name__c</fullName>
    <description>Name for TES Products.</description>
    <label>Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>NSI</fullName>
            </value>
            <value>
                <fullName>S1</fullName>
            </value>
            <value>
                <fullName>#N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>