NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_OnHand__c.field-meta.xml
<CustomField>
    <fullName>NATT_OnHand__c</fullName>
    <description>Indicates if enough is on hand for TES Products.</description>
    <label>On Hand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>