NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Origin_Country__c.field-meta.xml
<CustomField>
    <fullName>NATT_Origin_Country__c</fullName>
    <label>Origin Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CN</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>