NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_P_N__c.field-meta.xml
<CustomField>
    <fullName>NATT_P_N__c</fullName>
    <description>The Part Number for NATT JDE</description>
    <label>Part Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>