NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Plan_Fmly__c.field-meta.xml
<CustomField>
    <fullName>NATT_Plan_Fmly__c</fullName>
    <description>NATT Use</description>
    <label>Plan Fmly</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APU</fullName>
            </value>
            <value>
                <fullName>BMP</fullName>
            </value>
            <value>
                <fullName>KCU</fullName>
            </value>
            <value>
                <fullName>KES</fullName>
            </value>
            <value>
                <fullName>KLO</fullName>
            </value>
            <value>
                <fullName>KSU</fullName>
            </value>
            <value>
                <fullName>KTR</fullName>
            </value>
            <value>
                <fullName>MCK</fullName>
            </value>
            <value>
                <fullName>PNT</fullName>
            </value>
            <value>
                <fullName>WLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>