NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_PpgDiscountCode__c.field-meta.xml
<CustomField>
    <fullName>NATT_PpgDiscountCode__c</fullName>
    <description>PPG-specific discount code</description>
    <label>PPG Discount Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>