NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Price_Tier_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Price_Tier_Code__c</fullName>
    <label>Price Tier Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>