NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Price_Tier_Description__c.field-meta.xml
<CustomField>
    <fullName>NATT_Price_Tier_Description__c</fullName>
    <label>Price Tier Code Description</label>
    <type>TextArea</type>
</CustomField>