NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Product_Is_Labor__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Is_Labor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this product represents labor - used in bluedge calculations</description>
    <label>Product Is Labor</label>
    <type>Checkbox</type>
</CustomField>