NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_ProductSearchKeyword__c.field-meta.xml
<CustomField>
    <fullName>NATT_ProductSearchKeyword__c</fullName>
    <description>Product Search Keyword for TES Products.</description>
    <label>Product Search Keyword</label>
    <type>TextArea</type>
</CustomField>