NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_ProductType__c.field-meta.xml
<CustomField>
    <fullName>NATT_ProductType__c</fullName>
    <description>Product Type code in JDE</description>
    <label>JDE Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>