NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_ProductTypeSetBundled__c.field-meta.xml
<CustomField>
    <fullName>NATT_ProductTypeSetBundled__c</fullName>
    <description>Product Type for TES Products.</description>
    <label>Product Type - Set Bundled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bundled Product</fullName>
            </value>
            <value>
                <fullName>Simple Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>