NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Quote_Template_Section__c.field-meta.xml
<CustomField>
    <fullName>NATT_Quote_Template_Section__c</fullName>
    <description>for natt quotes</description>
    <label>Quote Template Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Quote_Template_Section</valueSetName>
    </valueSet>
</CustomField>