NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Rebate_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Rebate_Code__c</fullName>
    <description>NATT Use</description>
    <label>Rebate Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KB</fullName>
            </value>
            <value>
                <fullName>PK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>