NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Sales_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Sales_Code__c</fullName>
    <description>Field used for PPG products to provide a code that communicates the orderability of an item such as orderable, viewable but not orderable (batteries, repair micros, marine compressors), or not viewable and not orderale.</description>
    <label>NATT Sales Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>