NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Sandbox_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_Sandbox_Product_Id__c</fullName>
    <description>used for vlookup and data load</description>
    <label>NATT Sandbox Product Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>