NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_SelectionCode__c.field-meta.xml
<CustomField>
    <fullName>NATT_SelectionCode__c</fullName>
    <description>Selection Code for TES Products. If WEB then should go up on the website.</description>
    <label>Selection Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>999</fullName>
            </value>
            <value>
                <fullName>WEB</fullName>
            </value>
            <value>
                <fullName>#N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>