NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Short_Item_No__c.field-meta.xml
<CustomField>
    <fullName>NATT_Short_Item_No__c</fullName>
    <description>NATT Use</description>
    <label>Short Item No</label>
    <length>8</length>
    <type>Text</type>
</CustomField>