NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>NATT_ShortDescription__c</fullName>
    <description>Short Description for TES Products.</description>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>