NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_SignalCode__c.field-meta.xml
<CustomField>
    <fullName>NATT_SignalCode__c</fullName>
    <description>JDE Signal Code for the item</description>
    <label>Signal Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>NLO</fullName>
            </value>
            <value>
                <fullName>NSI</fullName>
            </value>
            <value>
                <fullName>NSU</fullName>
            </value>
            <value>
                <fullName>S1</fullName>
            </value>
            <value>
                <fullName>S1D</fullName>
            </value>
            <value>
                <fullName>S2</fullName>
            </value>
            <value>
                <fullName>NRC</fullName>
            </value>
            <value>
                <fullName>BY2</fullName>
                <label>BUYER HOLD</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <label>NOT AVAILABLE</label>
            </value>
            <value>
                <fullName>OB1</fullName>
            </value>
            <value>
                <fullName>OBS</fullName>
            </value>
            <value>
                <fullName>PRC</fullName>
            </value>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>PSR</fullName>
            </value>
            <value>
                <fullName>VIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>