NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Sls_Cd1__c.field-meta.xml
<CustomField>
    <fullName>NATT_Sls_Cd1__c</fullName>
    <description>NATT. A = Active, RB = Revision Beginning, New Part (in process of being setup), R = Mfg ready costing, ZD = Zero Demand (slow-moving item)</description>
    <label>Sls Cd1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>RB</fullName>
            </value>
            <value>
                <fullName>ZD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>