NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_SpecialProducts__c.field-meta.xml
<CustomField>
    <fullName>NATT_SpecialProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Products</label>
    <type>Checkbox</type>
</CustomField>