NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Standard_Features__c.field-meta.xml
<CustomField>
    <fullName>NATT_Standard_Features__c</fullName>
    <label>Standard Features</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>