NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Status__c.field-meta.xml
<CustomField>
    <fullName>NATT_Status__c</fullName>
    <description>Status for TES Products. If Enable it can be viewed on the Commerce site to the public.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enable</fullName>
            </value>
            <value>
                <fullName>Not Enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>