NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Stocking_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Stocking_Type__c</fullName>
    <description>NATT. P = Purchased Item. K = Kit (what is assembled in the shop). M = Manufactured Item</description>
    <label>Stocking Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>K</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>