NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Sub_Comm__c.field-meta.xml
<CustomField>
    <fullName>NATT_Sub_Comm__c</fullName>
    <description>NATT Use</description>
    <label>Sub Comm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>02W</fullName>
            </value>
            <value>
                <fullName>03W</fullName>
            </value>
            <value>
                <fullName>04W</fullName>
            </value>
            <value>
                <fullName>05W</fullName>
            </value>
            <value>
                <fullName>06W</fullName>
            </value>
            <value>
                <fullName>07W</fullName>
            </value>
            <value>
                <fullName>08W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>