NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>NATT_SubCategory__c</fullName>
    <description>Sub Category for TES Products.</description>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>426, X426, X430 Parts</fullName>
            </value>
            <value>
                <fullName>Alternators</fullName>
            </value>
            <value>
                <fullName>Auxillary Power Unit Parts</fullName>
            </value>
            <value>
                <fullName>Battery Accessories</fullName>
            </value>
            <value>
                <fullName>Bearing Dampers</fullName>
            </value>
            <value>
                <fullName>Bearings</fullName>
            </value>
            <value>
                <fullName>Bearings, Camshaft</fullName>
            </value>
            <value>
                <fullName>Bearings, Connecting Rod</fullName>
            </value>
            <value>
                <fullName>Bearings, Crankshaft</fullName>
            </value>
            <value>
                <fullName>Bearings, Main</fullName>
            </value>
            <value>
                <fullName>Bearings, Thrust</fullName>
            </value>
            <value>
                <fullName>Belts</fullName>
            </value>
            <value>
                <fullName>Blowers</fullName>
            </value>
            <value>
                <fullName>Bolts</fullName>
            </value>
            <value>
                <fullName>Bolts, Thermistor</fullName>
            </value>
            <value>
                <fullName>Brackets</fullName>
            </value>
            <value>
                <fullName>Brushes</fullName>
            </value>
            <value>
                <fullName>Bushings, Camshaft</fullName>
            </value>
            <value>
                <fullName>Bushings, Connecting Rod</fullName>
            </value>
            <value>
                <fullName>Bushings, Coupler</fullName>
            </value>
            <value>
                <fullName>Check Valves</fullName>
            </value>
            <value>
                <fullName>Circuit Breakers</fullName>
            </value>
            <value>
                <fullName>Clutches</fullName>
            </value>
            <value>
                <fullName>Coils</fullName>
            </value>
            <value>
                <fullName>Compressor Gasket Sets</fullName>
            </value>
            <value>
                <fullName>Compressor Gaskets</fullName>
            </value>
            <value>
                <fullName>Connecting Rods</fullName>
            </value>
            <value>
                <fullName>Couplers</fullName>
            </value>
            <value>
                <fullName>Covers</fullName>
            </value>
            <value>
                <fullName>Covers, Thermostat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>