NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_UnitCost__c.field-meta.xml
<CustomField>
    <fullName>NATT_UnitCost__c</fullName>
    <description>Contains the unit cost of the item in USD. The purpose of the field is to overcome a B2B Commerce limitation of 1 basis price per storefront, and is used when generating price book prices for internal PPG customers.</description>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>