NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_UOM_Conversion__c.field-meta.xml
<CustomField>
    <fullName>NATT_UOM_Conversion__c</fullName>
    <description>NATT unit of measure conversion factor</description>
    <label>UOM Conversion</label>
    <precision>15</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>