NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Weight__c.field-meta.xml
<CustomField>
    <fullName>NATT_Weight__c</fullName>
    <description>Item weight in US pounds</description>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>