NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Width__c.field-meta.xml
<CustomField>
    <fullName>NATT_Width__c</fullName>
    <description>Width of the item in Inches</description>
    <label>Width</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>