NATTQA-ENV/force-app/main/default/objects/Product2/fields/Part_Number_without_dashes__c.field-meta.xml
<CustomField>
    <fullName>Part_Number_without_dashes__c</fullName>
    <formula>SUBSTITUTE(NATT_P_N__c,&quot;-&quot;,&quot;&quot;)</formula>
    <label>Part Number without dashes</label>
    <type>Text</type>
</CustomField>