NATTQA-ENV/force-app/main/default/objects/Product2/fields/SBQQ__NonDiscountable__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__NonDiscountable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this product as non discountable.</description>
    <inlineHelpText>Marks this product as not discountable.</inlineHelpText>
    <label>Non Discountable</label>
    <type>Checkbox</type>
</CustomField>